# liblauncher

./: .gitignore  Cargo.toml  auth.json
migrations/2022-06-14-150927_create_accounts/: up.sql
migrations/2022-08-14-020515_accounts/: up.sql
src/: error.rs  lib.rs  schema.rs
src/auth/: mod.rs  mojang.rs  profile.rs
src/auth/microsoft/: mod.rs  serve.rs
src/game_profile/: mod.rs
src/resources/: download.rs  jdk.rs  mod.rs  natives.rs  version.rs
src/store/: mod.rs  models.rs
tests/: mojang_auth.rs  run_game.rs
